--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
-    <script src="./js/index.js"></script>
+    <script src="./js/HomeWork.js"></script>
 </body>
 </html>
